--- a/css/page.css
+++ b/css/page.css
@@ -1,15 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Marck+Script&subset=latin,latin-ext,cyrillic);
-@font-face {
-    font-family: 'BebasNeueRegular';
-    src: url('../resources/fonts/bebasneue-webfont.eot');
-    src: url('../resources/fonts/bebasneue-webfont.eot?#iefix') format('eot'),
-         url('../resources/fonts/bebasneue-webfont.woff') format('woff'),
-         url('../resources/fonts/bebasneue-webfont.ttf') format('truetype'),
-         url('../resources/fonts/bebasneue-webfont.svg#webfontX0YNjQNl') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
 
 /**
  * ------------------
@@ -232,7 +220,10 @@ section {
  * Game screen
  * ------------------
  */
-#pacman {  }
+#pacman {
+	width: 800px;
+	height: 600px;
+}
 
 #pacman .score {
 	position: relative;
