--- a/css/page.css
+++ b/css/page.css
@@ -220,12 +220,12 @@ section {
  * Game screen
  * ------------------
  */
-#pacman {
+#dge {
 	width: 800px;
 	height: 600px;
 }
 
-#pacman .score {
+#dge .score {
 	position: relative;
 	float: right;
 	padding: 8px 20px;
@@ -241,7 +241,7 @@ section {
 	border-top-right-radius: 8px;
 }
 
-#pacman canvas {
+#dge canvas {
 	-webkit-box-shadow: 0 0 80px #bbb;
 	-moz-box-shadow: 0 0 80px #bbb;
 	box-shadow: 0 0 80px #bbb;
